# dash-aggrid

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  MANIFEST.in  Makefile  NAMESPACE  Project.toml  README.md  _validate_init.py  app.py  demo_app.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sample_data.py  setup.py  ssrm_demo.duckdb  usage.py  webpack.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
R/: agjsAgChartsJS.R  agjsAgGridJS.R  internal.R
aggrid_js/: AgChartsJS.py  AgGridJS.py  __init__.py  package-info.json
assets/: agcharts-configs.js  aggrid-configs.js  row-drag-demo.css
dash_aggrid/: AgChartsJS.py  AgGridJS.py
dash_aggrid_js/: AgGridJS.py  __init__.py  metadata.json  package-info.json  ssrm.py
man/: agjsAgChartsJS.Rd  agjsAgGridJS.Rd
scripts/: sync_version.py
src/: AggridJs.jl  DashAggrid.jl  DashAggridJs.jl
src/demo/: App.js
src/jl/: agjs_agchartsjs.jl  agjs_aggridjs.jl
src/lib/: index.js
src/lib/components/: AgChartsJS.jsx  AgGridJS.jsx
